[package]
name = "project-8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.9"
clap = { version = "4.5.28", features = ["derive", "wrap_help"] }
clap_complete = "4.5.44"
rustyline = "15.0.0"
